Added getter for id field to Review.java, updated language in category.html template to make it more clear what's happening and fixed the thymeleaf logic for generating the list of reviews to access fields by name rather than by getter method.

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -19,8 +19,11 @@
     </header>
     <div class="main">
         <div class="reviews">
+            <h2 th:text = "${category.name} + ' reviews'">Reviews for Catamaran</h2>
             <ul>
-                <li th:each = "${reviews}">Chrysler Man'o'war</li>
+                <li th:each = "review: ${category.reviews}">
+                    <a th:text = "${review.manufacturer} + ' ' + ${review.modelName}" th:href="'/review/' + ${review.id}">Chrysler Man'o'war</a>
+                </li>
             </ul>
         </div>
 <!--        <div class="photostack">-->
