--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -37,8 +37,8 @@
                 <form action="reviews.html" method="post" class="review-form">
                     <h3 class="review-form-header">Submit a Review</h3>
                     <label for="boat-type">Boat Type</label>
-                    <select th:each="category: ${categories}" name="bcategory" id="boat-category-id">
-                        <option value="${cate">Catamaran</option>
+                    <select name="bcategory" id="boat-category-id">
+                        <option th:each="category: ${categories}" th:text="${category.name}" th:value="${category.id}">Catamaran</option>
 <!--                        <option value="dinghy">Dinghy</option>-->
 <!--                        <option value="motorsailer">Motorsailer</option>-->
 <!--                        <option value="historic">Historic</option>-->
