--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,7 +34,7 @@
             <h1>RateCraft</h1>
             <div class="right-side-content">
                 
-                <form action="reviews.html" method="post" class="review-form">
+                <form action="/review" method="post" class="review-form">
                     <h3 class="review-form-header">Submit a Review</h3>
                     <label for="boat-type">Boat Type</label>
                     <select name="bcategory" id="boat-category-id">
