Site is funcitoning almost fully, pages navigate appropriately, reviews can be added by user

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Catamaran</h1>
         <div class="home-button">
-            <a href="../../index.html"><img src="../../img/home.png" alt="Home Button"></a>
+            <a href="/"><img src="../../img/home.png" alt="Home Button"></a>
         </div>
     </header>
     <div class="main">
