--- a/src/main/resources/templates/reviews.html
+++ b/src/main/resources/templates/reviews.html
@@ -16,7 +16,7 @@
         <h1 th:text="${review.name}">ReviewTitle</h1>
 
         <div class="home-button">
-            <a href="../../index.html"><img src="../../img/home.png" alt="Home Button"></a>
+            <a href="/"><img src="../../img/home.png" alt="Home Button"></a>
         </div>
     </header>
     <main>
@@ -25,12 +25,8 @@
             <h3 th:text="${review.manufacturer}">BoatMake</h3>
             <h3 th:text="${review.modelName}">ModelName</h3>
             <div class="review-body">
-                <p th:text="${review.description}">Ut nec convallis justo. Donec a nisl urna. Donec consectetur elementum ex porta egestas. Donec tristique purus quis commodo luctus. Praesent ultrices eros sit amet felis eleifend, porta consequat massa consequat. Mauris sit amet posuere
-                    tellus. Vivamus convallis, ex in posuere aliquam, felis sapien vulputate enim, eu faucibus eros sem et neque. Duis in erat id velit pellentesque aliquet feugiat vitae enim. Sed interdum est lorem. Vestibulum aliquet nulla nisl, ac
-                    tempus ipsum accumsan congue.
+                <p th:text="${review.description}">Description text goes here.
                 </p>
-
-
             </div>
         </div>
 
