Fully functioning review editing capability, working towards being able to remove a review. Hashtags come next!

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -23,8 +23,10 @@
             <ul>
                 <li th:each = "review: ${category.reviews}">
                     <a th:text = "${review.manufacturer} + ' ' + ${review.modelName}" th:href="'/review/' + ${review.id}">Chrysler Man'o'war</a>
+                    <a th:href="'/revieweditor/' + ${review.id}">IMG</a>
                 </li>
             </ul>
+
         </div>
 <!--        <div class="photostack">-->
 <!--            <ul>-->
